--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <nav>
         <img src="img/logo_transparent.png" alt="Blue box Logo">
         <ul>
-            <li><a href="#">MY LIST</a></li>
+            <li><a href="myList.html">MY LIST</a></li>
+            <li><a href="explore.html">EXPLORE</a></li>
             <li><a href="#">NEWS</a></li>
             <li class="dropdown">
                 <a href="#">SIGN UP ↓</a>
