--- a/explore.html
+++ b/explore.html
@@ -13,15 +13,17 @@
 </head>
 <body>
     <nav>
-        <img src="img/logo_transparent.png" alt="Blue box Logo">
+        <a href="index.html">
+        <img src="/img/logo_transparent.png" alt="Blue box Logo">
+        </a>
         <ul>
-            <li><a href="myList.html">MY LIST</a></li>
-            <li><a href="explore.html">EXPLORE</a></li>
+            <li><a href="/myList.html">MY LIST</a></li>
+            <li><a href="/explore.html">EXPLORE</a></li>
             <li><a href="#">NEWS</a></li>
             <li class="dropdown">
-                <a href="#">SIGN UP ↓</a>
+                <a href="/LogIn/LogIn.html">LOG IN ↓</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">LOG IN</a></li>
+                    <li><a href="/singUp/signUp.html">SIGN UP</a></li>
                 </ul>
             </li>
         </ul>
@@ -62,7 +64,7 @@
           <li class="menu__item"><a class="menu__link" href="#">About</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Portfolio</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+          <li class="menu__item"><a class="menu__link" href="/contactUs/contactUs.html">Contact</a></li>
     
         </ul>
         <p>&copy;2024 Dante Avila | All Rights Reserved</p>
