changed the search bar and styles for the cards of the list

--- a/myList.html
+++ b/myList.html
@@ -30,10 +30,30 @@
     </nav>
 
     <div class="searchWrapper">
-        <div class="searchContainer">
-            <input type="search" id="searchInput" placeholder="Search Game"/>
-            <button id="search">Search</button>
+
+        <div class="ui-input-container">
+            <input
+              required=""
+              placeholder="Search game..."
+              class="ui-input"
+              id="searchInput"
+              type="text"
+            />
+            <div class="ui-input-underline"></div>
+            <div class="ui-input-highlight"></div>
+            <div class="ui-input-icon" id="search">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <path
+                  stroke-linejoin="round"
+                  stroke-linecap="round"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  d="M21 21L16.65 16.65M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z"
+                ></path>
+              </svg>
+            </div>
         </div>
+
         <div class="buttons">
             <button class="buttonValue" onclick="filterGame('all')">All</button>
             <button class="buttonValue" onclick="filterGame('fps')">FPS</button>
