--- a/myList.html
+++ b/myList.html
@@ -87,7 +87,7 @@
           <li class="menu__item"><a class="menu__link" href="/contactUs/contactUs.html">Contact</a></li>
     
         </ul>
-        <p>&copy;2024 Dante Avila | All Rights Reserved</p>
+        <p>&copy;2024 Dante Avila</p>
       </footer>
       
 
