added more games

--- a/explore.html
+++ b/explore.html
@@ -53,11 +53,12 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="buttonValue" onclick="filterGame('all')">All</button>
+            <button class="buttonValue" onclick="filterGame('all')">ALL</button>
             <button class="buttonValue" onclick="filterGame('fps')">FPS</button>
             <button class="buttonValue" onclick="filterGame('rpg')">RPG</button>
+            <button class="buttonValue" onclick="filterGame('coop')">COOP</button>
             <button class="buttonValue" onclick="filterGame('mmorpg')">MMORPG</button>
-            <button class="buttonValue" onclick="filterGame('arpg')">ARPG</button>
+            <button class="buttonValue" onclick="filterGame('moba')">MOBA</button>
         </div>
         <div id="gamesContainer"></div>
     </div>
