--- a/myList.html
+++ b/myList.html
@@ -59,7 +59,7 @@
             <button class="buttonValue" onclick="filterGame('fps')">FPS</button>
             <button class="buttonValue" onclick="filterGame('rpg')">RPG</button>
             <button class="buttonValue" onclick="filterGame('mmorpg')">MMORPG</button>
-            <button class="buttonValue" onclick="filterGame('arpg')">ARPG</button>
+            <button class="buttonValue" onclick="filterGame('arpg')">MOBA</button>
         </div>
         <div id="myListContainer"></div>
     </div>
