go back top button

--- a/contactUs/contactUs.html
+++ b/contactUs/contactUs.html
@@ -6,6 +6,7 @@
     <title>Blue Box</title>
     <link rel="stylesheet" href="../styles.css" />
     <script src="contactUs.js" defer></script>
+    <script type="text/javascript" src="/toTop.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href= 
@@ -28,6 +29,9 @@
             </ul>
         </li>
     </ul>
+    <a href="#" class="toTop">
+      <i class="fas fa-chevron-up"></i> 
+    </a>
 </nav>
 
     <div class="formContainer"></div>
