--- a/explore.html
+++ b/explore.html
@@ -6,6 +6,7 @@
     <title>Blue Box</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="explore.js" defer></script>
+    <script type="text/javascript" src="/toTop.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href= 
@@ -27,6 +28,9 @@
                 </ul>
             </li>
         </ul>
+        <a href="#" class="toTop">
+          <i class="fas fa-chevron-up"></i> 
+        </a>
     </nav>
 
     <div class="searchWrapper">
@@ -60,6 +64,7 @@
             <button class="buttonValue" onclick="filterGame('mmorpg')">MMORPG</button>
             <button class="buttonValue" onclick="filterGame('moba')">MOBA</button>
         </div>
+
         <div id="gamesContainer"></div>
     </div>
     
