--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blue Box</title>
     <link rel="stylesheet" href="styles.css" />
+    <script type="text/javascript" src="/toTop.js" defer></script>
     <script src="script.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -27,6 +28,9 @@
                 </ul>
             </li>
         </ul>
+        <a href="#" class="toTop">
+            <i class="fas fa-chevron-up"></i> 
+        </a>
     </nav>
 
     <section class="slider">
