added href to about

--- a/explore.html
+++ b/explore.html
@@ -85,7 +85,7 @@
             </a></li>
         </ul>
         <ul class="menu">
-          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+          <li class="menu__item"><a class="menu__link" href="/index.html#about">About</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Portfolio</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
           <li class="menu__item"><a class="menu__link" href="/contactUs/contactUs.html">Contact</a></li>
