--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     
     <div class="divider">ABOUT</div>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="aboutText">
             <h1>WHAT IS BLUE BOX?</h1>
             <br>
@@ -231,7 +231,7 @@
             </a></li>
         </ul>
         <ul class="menu">
-          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+          <li class="menu__item"><a class="menu__link" href="/index.html#about">About</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Portfolio</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
           <li class="menu__item"><a class="menu__link" href="contactUs/contactUs.html">Contact</a></li>
