added more cards to the slide

--- a/index.html
+++ b/index.html
@@ -210,6 +210,36 @@
                     <h2>Team Fortress 2</h2> 
                     <span>Multiplayer FPS</span>
                 </li> 
+                <li class="card"> 
+                    <div class="img"><img src= "img/cards/bf5.jpg" alt="Battlefield 5" draggable="false"> </div> 
+                    <h2>Battlefield V</h2> 
+                    <span>Multiplayer FPS</span>
+                </li>
+                <li class="card"> 
+                    <div class="img"><img src= "img/cards/arkSurvivalEvolved.jpg" alt="Ark" draggable="false"> </div> 
+                    <h2>Ark Survival Evolved</h2> 
+                    <span>Survival</span>
+                </li>
+                <li class="card"> 
+                    <div class="img"><img src= "img/cards/albionOnline.jpg" alt="Albion Online" draggable="false"> </div> 
+                    <h2>Albion Online</h2> 
+                    <span>MMORPG</span>
+                </li>
+                <li class="card"> 
+                    <div class="img"><img src= "img/cards/doomEternal.jpg" alt="Doom Eternal" draggable="false"> </div> 
+                    <h2>Doom Eternal</h2> 
+                    <span>FPS</span>
+                </li>
+                <li class="card"> 
+                    <div class="img"><img src= "img/cards/heroesOfStorm.jpg" alt="Heroes Of The Storm" draggable="false"> </div> 
+                    <h2>Heroes Of The Storm</h2> 
+                    <span>MOBA</span>
+                </li>
+                <li class="card"> 
+                    <div class="img"><img src= "img/cards/seaOfThieves.jpg" alt="Sea Of Thieves" draggable="false"> </div> 
+                    <h2>Sea Of Thieves</h2> 
+                    <span>COOP</span>
+                </li>
             </ul> 
             <i id="right" class="fa-solid fas fa-angle-right"></i> 
         </div>
