added description to sliderText

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <div class="mySlider fade">
             <div class="sliderText">
                 <h1>HALF-LIFE 2</h1>
-                <p>
-                    The saga that marked a before and after in the history of FPS<br>Subscribe to my channel </p>
+                <p>Winner of 39 Game of the Year awards. The saga that marked a before and after in the history of FPS games. </p>
             </div>
             <img src="img/cards/hl2.jpg" alt="half life 2 wallpaper">
         </div>     
@@ -47,7 +46,7 @@
         <div class="mySlider fade">
             <div class="sliderText">
                 <h1>HELLDIVERS 2</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sint placeat ipsum ipsam harum excepturi, beatae laboriosam quidem iste rem ducimus nemo.</p>
+                <p>Noble soldiers, heroic deeds and genuine, unwavering patriotism in the face of the threat of gigantic acid-spewing monstrosities.</p>
             </div>
             <img src="img/cards/helldivers.jpeg" alt="HELLDIVERS 2">
         </div>
@@ -55,7 +54,7 @@
         <div class="mySlider fade">
             <div class="sliderText">
                 <h1>BATTLEFIELD 1</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sint placeat ipsum ipsam harum excepturi, beatae laboriosam quidem iste rem ducimus nemo.</p>
+                <p>Acclaimed by the community as one of the best battlefield deliveries, set in the First World War.</p>
             </div>
             <img src="img/cards/bf1.jpg" alt="BATTLEFIELD 1">
         </div>
@@ -63,7 +62,7 @@
         <div class="mySlider fade">
             <div class="sliderText">
                 <h1>WORLD OF WARCRAFT</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sint placeat ipsum ipsam harum excepturi, beatae laboriosam quidem iste rem ducimus nemo.</p>
+                <p>The world's most famous mmorpg. Assume the roles of heroic fantasy characters and explore a virtual world full of mystery, magic, and endless adventure.</p>
             </div>
             <img src="img/cards/wow.jpg" alt="WORLD OF WARCRAFT">
         </div>
