created folders per page section

--- a/singUp/signUp.html
+++ b/singUp/signUp.html
@@ -18,8 +18,8 @@
         <img src="/img/logo_transparent.png" alt="Blue box Logo">
         </a>
         <ul>
-            <li><a href="/myList.html">MY LIST</a></li>
-            <li><a href="/explore.html">EXPLORE</a></li>
+            <li><a href="/myList/myList.html">MY LIST</a></li>
+            <li><a href="/explore/explore.html">EXPLORE</a></li>
             <li><a href="#">NEWS</a></li>
             <li class="dropdown">
                 <a href="/LogIn/LogIn.html">LOG IN ↓</a>
@@ -29,7 +29,7 @@
             </li>
         </ul>
         <a href="#" class="toTop">
-            <i class="fas fa-chevron-up"></i> 
+          <i class="fas fa-chevron-up"></i> 
         </a>
     </nav>
 
