--- a/LogIn/LogIn.html
+++ b/LogIn/LogIn.html
@@ -18,8 +18,8 @@
         <img src="/img/logo_transparent.png" alt="Blue box Logo">
         </a>
         <ul>
-            <li><a href="/myList.html">MY LIST</a></li>
-            <li><a href="/explore.html">EXPLORE</a></li>
+            <li><a href="/myList/myList.html">MY LIST</a></li>
+            <li><a href="/explore/explore.html">EXPLORE</a></li>
             <li><a href="#">NEWS</a></li>
             <li class="dropdown">
                 <a href="/LogIn/LogIn.html">LOG IN ↓</a>
