--- a/contactUs/contactUs.html
+++ b/contactUs/contactUs.html
@@ -19,8 +19,8 @@
     <img src="/img/logo_transparent.png" alt="Blue box Logo">
     </a>
     <ul>
-        <li><a href="/myList.html">MY LIST</a></li>
-        <li><a href="/explore.html">EXPLORE</a></li>
+        <li><a href="/myList/myList.html">MY LIST</a></li>
+        <li><a href="/explore/explore.html">EXPLORE</a></li>
         <li><a href="#">NEWS</a></li>
         <li class="dropdown">
             <a href="/LogIn/LogIn.html">LOG IN ↓</a>
@@ -32,7 +32,7 @@
     <a href="#" class="toTop">
       <i class="fas fa-chevron-up"></i> 
     </a>
-</nav>
+  </nav>
 
     <div class="formContainer"></div>
         <div class="signUpWrapper">
