--- a/myList/myList.html
+++ b/myList/myList.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blue Box</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="myList.js" defer></script>
+    <link rel="stylesheet" href="/styles.css" />
+    <script src="/myList/myList.js" defer></script>
     <script type="text/javascript" src="/toTop.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -14,23 +14,23 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">
-        <img src="/img/logo_transparent.png" alt="Blue box Logo">
-        </a>
-        <ul>
-            <li><a href="/myList.html">MY LIST</a></li>
-            <li><a href="/explore.html">EXPLORE</a></li>
-            <li><a href="#">NEWS</a></li>
-            <li class="dropdown">
-                <a href="/LogIn/LogIn.html">LOG IN ↓</a>
-                <ul class="dropdown-menu">
-                    <li><a href="/singUp/signUp.html">SIGN UP</a></li>
-                </ul>
-            </li>
-        </ul>
-        <a href="#" class="toTop">
-          <i class="fas fa-chevron-up"></i> 
-        </a>
+      <a href="/index.html">
+      <img src="/img/logo_transparent.png" alt="Blue box Logo">
+      </a>
+      <ul>
+          <li><a href="/myList/myList.html">MY LIST</a></li>
+          <li><a href="/explore/explore.html">EXPLORE</a></li>
+          <li><a href="#">NEWS</a></li>
+          <li class="dropdown">
+              <a href="/LogIn/LogIn.html">LOG IN ↓</a>
+              <ul class="dropdown-menu">
+                  <li><a href="/singUp/signUp.html">SIGN UP</a></li>
+              </ul>
+          </li>
+      </ul>
+      <a href="#" class="toTop">
+        <i class="fas fa-chevron-up"></i> 
+      </a>
     </nav>
 
     <div class="searchWrapper">
