--- a/myList/myList.html
+++ b/myList/myList.html
@@ -59,12 +59,12 @@
         </div>
 
         <div class="buttons">
-          <button class="buttonValue" onclick="filterGame('all')">ALL</button>
-          <button class="buttonValue" onclick="filterGame('fps')">FPS</button>
-          <button class="buttonValue" onclick="filterGame('rpg')">RPG</button>
-          <button class="buttonValue" onclick="filterGame('coop')">COOP</button>
-          <button class="buttonValue" onclick="filterGame('mmorpg')">MMORPG</button>
-          <button class="buttonValue" onclick="filterGame('moba')">MOBA</button>
+          <button class="buttonValue" onclick="toggleCategory('all')">ALL</button>
+            <button class="buttonValue" onclick="toggleCategory('fps')">FPS</button>
+            <button class="buttonValue" onclick="toggleCategory('rpg')">RPG</button>
+            <button class="buttonValue" onclick="toggleCategory('coop')">COOP</button>
+            <button class="buttonValue" onclick="toggleCategory('mmorpg')">MMORPG</button>
+            <button class="buttonValue" onclick="toggleCategory('moba')">MOBA</button>
         </div>
         <div id="myListContainer"></div>
     </div>
